--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,19 +12,16 @@ body{
 	margin: 0px;
 	padding: 0px;
 }
+/* The following is styles for the navbar */
 nav {
-	background-color: #222;
+	background-color: #111;
 	width: 100%;
-	height: 25px;
 	margin: 0px;
-	padding: 8px;
 }
 nav ul {
 	list-style: none;
 	display: inline;
-	margin: 0px;
-	padding-left: 0px;
-	text-align: center;
+	padding-right: 10px;
 }
 nav li {
 	float: right;
@@ -41,10 +38,24 @@ nav a:hover {
 #navName {
 	width: 130px;
 	margin: 0px;
+	padding: 14px;
 	padding-right: 0px;
 	float: left;
+	text-align: left;
 }
-#navList {
+.navList {
 	float: right;
-	padding-right: 8px;
+	padding: 14px;
+}
+/* The following is styles for the intro section */
+#introduction {
+	background-color: #111;
+	color: #fff;
+	margin: auto;
+	padding-top: 120px;
+	padding-bottom: 120px;
+	text-align: center;
+}
+#introduction h1{
+	margin-top: 0px;
 }
