--- a/styles/styles.css
+++ b/styles/styles.css
@@ -130,3 +130,21 @@ footer {
 .circlePicture {
 	border-radius: 90px;
 }
+.sampleItem {
+	width: 80%;
+	height: 300px;
+	margin: auto;
+	background-image: url(../media/JustDoIt.jpg);
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+.portfolioPieceInfo {
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	
+}
+.portfolioPieceInfo h3 {
+	margin-top: 0px;
+}
