--- a/styles/styles.css
+++ b/styles/styles.css
@@ -132,18 +132,22 @@ footer {
 }
 .sampleItem {
 	width: 80%;
-	height: 300px;
+	height: 500px;
 	margin: auto;
-	background-image: url(../media/JustDoIt.jpg);
+	/*background-image: url(../media/JustDoIt.jpg);
 	background-size: contain;
 	background-repeat: no-repeat;
-	background-position: center;
+	background-position: center top;*/
 }
 .portfolioPieceInfo {
 	width: 100%;
 	height: 100%;
 	text-align: center;
-	
+}
+.portfolioPieceInfo img {
+	max-width: 100%;
+	max-height: auto;
+	display: block;
 }
 .portfolioPieceInfo h3 {
 	margin-top: 0px;
