Set up basic portfolio piece asteroids

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,7 @@ html {
 	/*remove browser default spacing*/
 	padding: 0px;
 	margin: 0px;
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-family: 'Lato', sans-serif;
 }
 body{
 	/*remove browser default spacing*/
