--- a/styles/styles.css
+++ b/styles/styles.css
@@ -153,7 +153,7 @@ footer {
 }
 .sampleItem3 {
 	height: 500px;
-	background-image: url(../media/Minion4kReference.png);
+	background-image: url(../media/Minion4KReference.png);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center top;
@@ -181,4 +181,16 @@ footer {
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 600px;
+}
+canvas { 
+	display: block; 
+	outline: 0px; 
+	margin-bottom: 1.5em; 
+}
+.sketch { 
+	margin: 50px auto 0px auto; padding: 25px 25px 15px 25px;
+	width: 1080px; min-width: 300px; overflow: auto;
+	border-left: 1px solid #444; border-top: 1px solid #444; 
+	border-right: 1px solid #333; border-bottom: 1px solid #333;
+	background-color: #3d3d3d;
 }
