--- a/styles/styles.css
+++ b/styles/styles.css
@@ -198,3 +198,28 @@ canvas {
 	margin-right: auto;
 	display: block;
 }
+
+.content {
+	width:80%;
+	padding-top: 20px;
+	margin: auto;
+}
+.largerow h3{
+	display: block;
+	float: right;
+	width: 40%;
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+
+@media (min-width: 1300px){
+	#samplework{width:100%;height:500px;}
+	.sampleItem1{width:33.33%; float: left;}
+	.sampleItem2{width:33.33%; float: left;}
+	.sampleItem3{width:33.33%; float: left;}
+}
+@media (max-width: 800px){
+	.content{width: 100%;}
+	.largerow img{width:100%;}
+	.largerow h3{width: 70%; margin: auto; float: none;}
+}
