--- a/styles/styles.css
+++ b/styles/styles.css
@@ -227,9 +227,22 @@ canvas {
 }
 @media (max-width: 1150px){
 	.sketch {display: none;}
+	#row1{width: 100%; height: 300px;}
+	#links #basicinfo{display: block; width: 100%; float:none;clear:left;}
+	#links #headshot{margin: auto; float: none;}
 }
 @media (max-width: 800px){
 	.content{width: 100%;}
 	.largerow img{width:100%;}
 	.largerow h3{width: 70%; margin: auto; float: none;}
+	#row1{width: 100%; height: 300px;}
+	#links #basicinfo{display: block; width: 100%; float:none;clear:left;}
+	#links #headshot{margin: auto; float: none;}
+}
+@media (max-width: 615px){
+	.navList{padding-left: 0px;}
+	.navLink{margin: 0px; font-size: 12px;width: 14px;}
+	#row1{width: 100%; height: 300px;}
+	#links #basicinfo{display: block; width: 100%; float:none;clear:left;}
+	#links #headshot{margin: auto; float: none;}
 }
