--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,6 @@
+/*------------------------------------------------
+Document setup styles 
+------------------------------------------------*/
 html {
 	/*set the default text and background color*/ 
 	color: #111;
@@ -12,7 +15,11 @@ body{
 	margin: 0px;
 	padding: 0px;
 }
+/*------------------------------------------------
+links styles 
+------------------------------------------------*/
 a{
+	/*set the links to white and remove decorations*/
 	color: #fff;
 	text-decoration: none;
 	font-family: 'Lato', sans-serif;
@@ -20,6 +27,7 @@ a{
 }
 
 a:hover{
+	/*darken links on hover */
 	text-decoration: none;
 	color:#aaa;
 	font-family: 'Lato', sans-serif;
@@ -30,29 +38,37 @@ a:focus {
 	text-decoration: none;
 }
 
-/* The following is styles for the navbar */
+/*------------------------------------------------
+Navbar styles 
+------------------------------------------------*/
+/*Set the background color of the nav bar and set the size */
 nav {
 	background-color: #111;
 	width: 100%;
 	margin: 0px;
 }
+/*make the links on the right display as a row instead of a column*/
 nav ul {
 	list-style: none;
 	display: inline;
 	padding-right: 10px;
 }
+/*make the links spaced apart*/
 nav li {
 	float: right;
+	padding: 16px;
+	padding-bottom: 23px;
+}
+/*the link boxes highlight on hover*/
+nav li:hover{
+	background-color: #333;
 }
 nav a {
 	text-decoration: none;
 	color: #fff;
-	padding: 8px;
-	margin: 8px;
 }
-nav a:hover {
-	color: #aaa;
-}
+/*needed to override the base link behaviour*/
+nav a:hover {color: #fff;}
 #navName {
 	width: 130px;
 	margin: 0px;
@@ -61,17 +77,17 @@ nav a:hover {
 	float: left;
 	text-align: left;
 }
+#navName a:hover{color: #aaa;}
 .navList {
 	float: right;
-	padding: 14px;
 }
 /* The following is styles for the intro section */
 #introduction {
 	background-color: #111;
 	color: #fff;
 	margin: auto;
-	padding-top: 150px;
-	padding-bottom: 150px;
+	padding-top: 90px;
+	padding-bottom: 50px;
 	text-align: center;
 }
 #introduction h1{
