--- a/styles/styles.css
+++ b/styles/styles.css
@@ -266,7 +266,7 @@ canvas {
 	margin: 10px;
 }
 #musiclink {
-	background: #eee url("../pieces/Music/Capture.PNG") center center;
+	background: #eee url("../pieces/Music/Capture.png") center center;
 	width: 350px;
 	height: 350px;
 	float: left;
