--- a/styles/styles.css
+++ b/styles/styles.css
@@ -81,7 +81,11 @@ nav a:hover {color: #fff;}
 .navList {
 	float: right;
 }
-/* The following is styles for the intro section */
+
+/*------------------------------------------------
+Header and links styles 
+------------------------------------------------*/
+/* match the color of the navigation and set the size */
 header {
 	background-color: #111;
 	color: #fff;
@@ -90,6 +94,7 @@ header {
 	padding-bottom: 50px;
 	text-align: center;
 }
+/* define the size of the header text */
 header h1{
 	margin-top: 0px;
 	font-size: 24pt;
@@ -97,17 +102,19 @@ header h1{
 header p { 
 	color: #bbb;
 }
-/*The following is styles for the links section */
+/**/
 #links {
 	background-color: #111;
 	color: #fff;
 	margin: auto;
 	padding-bottom: 30px;	
 }
+/*container that just gives 40% margin and centers div */
 #links #linksContainer{
 	width:60%;
 	margin: auto;
 }
+/*the top row in the quick description section on homepage */
 #row1 {
 	width: 100%;
 	clear: right;
@@ -115,13 +122,16 @@ header p {
 	padding-bottom: 40px;
 	height: 120px;
 }
+/*second row in the quick description section on homepage */
 #row2 {
 	width: 100%;
 }
+/*styling for the profile picture in homepage */
 #links #headshot {
 	width: 180px;
 	float: left;
 }
+/* The text in the quick description in homepage */
 #links #basicinfo {
 	width: 70%;
 	float: right;
@@ -129,7 +139,11 @@ header p {
 }
 
 
-/*The following is styles for the footer*/
+/*------------------------------------------------
+Footer styles 
+------------------------------------------------*/
+/*Match the color fo the header and nav bar and set the size 
+Also make sure that it stays at the bottom of the page with clear*/
 footer {
 	background-color: #111;
 	color: #ccc;
@@ -138,16 +152,19 @@ footer {
 	padding: 24px;
 	clear: both;
 } 
+/*social media links positioning and styling */
 footer #socialMedia {
 	width: 100%;
 	margin: auto;
 	text-align: center;
 	padding-bottom: 25px;
 }
+/*social media links positioning and styling */
 footer #socialMedia ul{
 	list-style: none;
 	padding: 0px;
 }
+/*social media links positioning and styling */
 footer #socialMedia li {
 	display: inline;
 	font-size: 12pt;
