--- a/styles/styles.css
+++ b/styles/styles.css
@@ -306,6 +306,9 @@ main img{
 	margin: 10px;
 }
 
+#projectlinks {clear: both; margin:auto;width:100%;height:120px;}
+
+
 .largerow a{
 	color: black;
 }
