--- a/styles/styles.css
+++ b/styles/styles.css
@@ -342,3 +342,6 @@ main img{
 	#links #basicinfo{display: block; width: 100%; float:none;clear:left;}
 	#links #headshot{margin: auto; float: none;}
 }
+@media (max-width: 510px){
+	#navName{width:100px;}
+}
