--- a/styles.css
+++ b/styles.css
@@ -73,3 +73,80 @@ nav{
     font-style:normal;
     color:#404040
 }
+@media only screen and (min-device-width:641px){
+    html.touch #simpleControls{
+        display:block !important
+    }
+}
+@media only screen and (max-width:750px){
+    #projectThumbs>.wrapper{
+        width:103%;
+        margin-left:-3%;
+        margin-top:-3%
+    }
+    #projectThumbs .project{
+        float:left;
+        margin-left:2.912621359223301%;
+        margin-top:3%;
+        width:47.0873786407767%;
+        cursor:pointer
+    }
+    #projectThumbs .project .project-image{
+        opacity:1;
+        -webkit-transition:initial
+    }
+    #projectThumbs .project .project-image{
+        background:#eee;
+        margin-bottom:3%
+    }
+    #projectThumbs .project .project-image .intrinsic{
+        padding-bottom:100%;
+        line-height:0;
+        text-align:center;
+        position:relative;
+        overflow:hidden
+    }
+    #projectThumbs .project .project-image .content-fill{
+        position:absolute;
+        top:0;
+        left:0;
+        bottom:0;
+        right:0
+    }
+    #projectThumbs .project .project-title{
+        font-family:Georgia,serif;
+        font-weight:normal;
+        font-style:italic;
+        font-size:12px;
+        text-transform:none;
+        letter-spacing:0px;
+        font-family:"Montserrat";
+        font-size:14px;
+        line-height:1.6em;
+        text-transform:uppercase;
+        text-decoration:none;
+        letter-spacing:.06em;
+        text-align:center;
+        font-weight:400;
+        font-style:normal;
+        color:#404040
+    }
+    #projectThumbs .project .project-item-count{
+        display:none
+    }
+    #projectThumbs .project:nth-child(odd){
+        clear:left !important
+    }
+    #projectThumbs .project:nth-child(4n+1){
+        clear:none
+    }
+    #projectPages .project{
+        margin:0 auto 20px;
+        width:auto !important;
+        float:none !important
+    }
+    .wrapper{
+        padding:0 0 1em;
+        border-bottom:1px solid rgba(221,221,221,0)
+    }
+}
