--- a/styles.css
+++ b/styles.css
@@ -14,12 +14,12 @@ nav{
 
 /*PROJECT TILES*/
 #projectThumbs{
-    clear:both
+    clear:both;
 }
 #projectThumbs>.wrapper{
     width:103%;
     margin-left:-3%;
-    margin-top:-3%
+    margin-top:-3%;
 }
 #projectThumbs .project{
     float:left;
@@ -27,33 +27,33 @@ nav{
     margin-top:3%;
     width:22.0873786407767%;
     cursor:pointer;
-    -webkit-transform:translatez(0)
+    -webkit-transform:translatez(0);
 }
 #projectThumbs .project .project-image .intrinsic{
     opacity:1;
     -webkit-transition:opacity .14s ease-out;
-    transition:opacity .14s ease-out
+    transition:opacity .14s ease-out;
 }
 #projectThumbs .project:hover .project-image .intrinsic{
-    opacity:.8
+    opacity:.8;
 }
 #projectThumbs .project .project-image{
     background:#eee;
-    margin-bottom:3%
+    margin-bottom:3%;
 }
 #projectThumbs .project .project-image .intrinsic{
     padding-bottom:100%;
     line-height:0;
     text-align:center;
     position:relative;
-    overflow:hidden
+    overflow:hidden;
 }
 #projectThumbs .project .project-image .content-fill{
     position:absolute;
     top:0;
     left:0;
     bottom:0;
-    right:0
+    right:0;
 }
 #projectThumbs .project .project-title{
     font-family:Georgia,serif;
@@ -71,47 +71,47 @@ nav{
     text-align:center;
     font-weight:400;
     font-style:normal;
-    color:#404040
+    color:#404040;
 }
 @media only screen and (min-device-width:641px){
     html.touch #simpleControls{
-        display:block !important
+        display:block !important;
     }
 }
 @media only screen and (max-width:750px){
     #projectThumbs>.wrapper{
         width:103%;
         margin-left:-3%;
-        margin-top:-3%
+        margin-top:-3%;
     }
     #projectThumbs .project{
         float:left;
         margin-left:2.912621359223301%;
         margin-top:3%;
         width:47.0873786407767%;
-        cursor:pointer
+        cursor:pointer;
     }
     #projectThumbs .project .project-image{
         opacity:1;
-        -webkit-transition:initial
+        -webkit-transition:initial;
     }
     #projectThumbs .project .project-image{
         background:#eee;
-        margin-bottom:3%
+        margin-bottom:3%;
     }
     #projectThumbs .project .project-image .intrinsic{
         padding-bottom:100%;
         line-height:0;
         text-align:center;
         position:relative;
-        overflow:hidden
+        overflow:hidden;
     }
     #projectThumbs .project .project-image .content-fill{
         position:absolute;
         top:0;
         left:0;
         bottom:0;
-        right:0
+        right:0;
     }
     #projectThumbs .project .project-title{
         font-family:Georgia,serif;
@@ -129,24 +129,24 @@ nav{
         text-align:center;
         font-weight:400;
         font-style:normal;
-        color:#404040
+        color:#404040;
     }
     #projectThumbs .project .project-item-count{
-        display:none
+        display:none;
     }
     #projectThumbs .project:nth-child(odd){
-        clear:left !important
+        clear:left !important;
     }
     #projectThumbs .project:nth-child(4n+1){
-        clear:none
+        clear:none;
     }
     #projectPages .project{
         margin:0 auto 20px;
         width:auto !important;
-        float:none !important
+        float:none !important;
     }
     .wrapper{
         padding:0 0 1em;
-        border-bottom:1px solid rgba(221,221,221,0)
+        border-bottom:1px solid rgba(221,221,221,0);
     }
 }
