--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,59 @@
 /*NAVIGATION*/
-nav{
-    
+header{
+    margin-bottom: 0px;
 }
-#navName{
-    
+#logo{
+    float: left;
 }
-#navLink{
-    
+#topNav{
+    float:right;
+    position: relative;
+    z-index: 100;
+    font-family: "Montserrat";
+    font-size: 14px;
+    line-height: 1.6em;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 400;
+    font-style: normal;
 }
-#navList{
-    
+nav ul{
+    list-style: none;
+    list-style-image: none;
+    padding: none;
+    margin: 0;
+    display: block;
 }
+nav li{
+    float: left;
+    position: relative;
+    margin-right: 26px;
+    display: list-item;
+}
+nav li a{
+    padding-top: 28.5px;
+    padding-right: 0px;
+    padding-bottom: 28.5px;
+    padding-left: 0px;
+    display: inline-block;
+    line-height: 28px;
+    margin-right: 0px;
+}
+/*PROJECT TILES*/
 body{
     max-width: 1200px;
     margin: 25px auto;
     padding: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: normal;
+    line-height: 1.6em;
+    font-size: 15px;
+    font-family: "calluna";
+    line-height: 1.8em;
+    text-transform: none;
+    font-weight: 400;
+    font-style: normal; 
 }
-/*PROJECT TILES*/
 #projectThumbs{
     clear:both;
 }
