--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,25 @@
+/*Cross Site*/
+body{
+    max-width: 1200px;
+    margin: 25px auto;
+    padding: 20px;
+    font-family: 'Roboto', Helvetica, sans-serif;
+    font-weight: normal;
+    line-height: 1.6em;
+    font-size: 15px;
+    line-height: 1.8em;
+    text-transform: none;
+    font-weight: 400;
+    font-style: normal; 
+}
+
 /*NAVIGATION*/
 header{
     margin-bottom: 0px;
+}
+a{
+   color: #111;
+   text-decoration: none;
 }
 #logo{
     float: left;
@@ -9,7 +28,7 @@ header{
     float:right;
     position: relative;
     z-index: 100;
-    font-family: "Montserrat";
+
     font-size: 14px;
     line-height: 1.6em;
     text-transform: uppercase;
@@ -40,20 +59,6 @@ nav li a{
     margin-right: 0px;
 }
 /*PROJECT TILES*/
-body{
-    max-width: 1200px;
-    margin: 25px auto;
-    padding: 20px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: normal;
-    line-height: 1.6em;
-    font-size: 15px;
-    font-family: "calluna";
-    line-height: 1.8em;
-    text-transform: none;
-    font-weight: 400;
-    font-style: normal; 
-}
 #projectThumbs{
     clear:both;
 }
@@ -97,13 +102,11 @@ body{
     right:0;
 }
 #projectThumbs .project .project-title{
-    font-family:Georgia,serif;
     font-weight:normal;
     font-style:italic;
     font-size:12px;
     text-transform:none;
     letter-spacing:0px;
-    font-family:"Montserrat";
     font-size:14px;
     line-height:1.6em;
     text-transform:uppercase;
@@ -155,13 +158,11 @@ body{
         right:0;
     }
     #projectThumbs .project .project-title{
-        font-family:Georgia,serif;
         font-weight:normal;
         font-style:italic;
         font-size:12px;
         text-transform:none;
         letter-spacing:0px;
-        font-family:"Montserrat";
         font-size:14px;
         line-height:1.6em;
         text-transform:uppercase;
