--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,14 @@ nav li a{
     font-style:normal;
     color:#404040;
 }
+.content-fill img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    max-width: 100%;
+    max-height: 100%;
+}
 @media only screen and (min-device-width:641px){
     html.touch #simpleControls{
         display:block !important;
