--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,13 @@ body{
     font-weight: 400;
     font-style: normal; 
 }
-
+main{
+    overflow: hidden;
+}
 /*NAVIGATION*/
 header{
     margin-bottom: 0px;
+    overflow: hidden;
 }
 a{
    color: #111;
@@ -28,13 +31,13 @@ a{
     float:right;
     position: relative;
     z-index: 100;
-
     font-size: 14px;
     line-height: 1.6em;
     text-transform: uppercase;
     letter-spacing: 1px;
     font-weight: 400;
     font-style: normal;
+    overflow: hidden;
 }
 nav ul{
     list-style: none;
@@ -42,6 +45,7 @@ nav ul{
     padding: none;
     margin: 0;
     display: block;
+    overflow: hidden;
 }
 nav li{
     float: left;
@@ -57,6 +61,54 @@ nav li a{
     display: inline-block;
     line-height: 28px;
     margin-right: 0px;
+}
+.main-nav{
+    overflow: hidden;
+}
+.main-nav ul{
+    overflow: hidden;
+}
+#projectThumbs{
+    overflow: hidden;
+}
+.wrapper{
+    overflow: hidden;
+}
+/*PROJECT PAGES*/
+.project{
+    margin-right: 300px;
+    margin-bottom: 25px;
+    
+}
+.project-meta{
+    margin-right: -300px;
+    width: 275px;
+    float: right;
+    margin-bottom: 34px;
+}
+.project-description{
+    overflow: hidden;
+}
+.image-list{
+    overflow: hidden;
+}
+.image{
+    position: relative;
+    overflow: hidden;
+}
+.image img{
+    max-width: 100%;
+    margin: 0 auto;
+    margin-bottom: 0.5em;
+    display: block;
+    float: left;
+    /*position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    max-width: 100%;
+    max-height: 100%;*/
+
 }
 /*PROJECT TILES*/
 #projectThumbs{
@@ -125,6 +177,7 @@ nav li a{
     max-width: 100%;
     max-height: 100%;
 }
+/*RESPONSIVE DESIGN*/
 @media only screen and (min-device-width:641px){
     html.touch #simpleControls{
         display:block !important;
