--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ nav li a{
     overflow: hidden;
 }
 /*PROJECT PAGES*/
-.project{
+.project-page{
     margin-right: 300px;
     margin-bottom: 25px;
 }
@@ -176,7 +176,7 @@ nav li a{
     }
 }
 @media only screen and (max-width:750px){
-    .project{
+    .project-page{
         width: 100%;
     }
     .project-meta{
