--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body{
     max-width: 1200px;
     margin: 25px auto;
     padding: 20px;
-    font-family: 'Roboto', Helvetica, sans-serif;
+    font-family: 'Arial', Helvetica, sans-serif;
     font-weight: normal;
     line-height: 1.6em;
     font-size: 15px;
