--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,11 @@
 /*Cross Site*/
 body{
-    max-width: 1200px;
+    max-width: 1000px;
     margin: 25px auto;
     padding: 20px;
-    font-family: 'Arial', Helvetica, sans-serif;
-    font-weight: normal;
-    line-height: 1.6em;
-    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 100%;
     line-height: 1.8em;
-    text-transform: none;
-    font-weight: 400;
-    font-style: normal; 
 }
 main{
     overflow: hidden;
