--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,34 @@
-/*Cross Site*/
+html{
+	font-size: 100%;
+}
 body{
     max-width: 1000px;
-    margin: 25px auto;
-    padding: 20px;
+    margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 100%;
     line-height: 1.8em;
+		color: #333;
+}
+header{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	text-align: center;
+}
+a{
+   color: #333;
+   text-decoration: none;
+}
+.inner{
+	margin: 0 auto;
+	max-width: 1024px;
 }
 main{
     overflow: hidden;
 }
-/*NAVIGATION*/
-a{
-   color: #111;
-   text-decoration: none;
-}
 .wrapper{
     overflow: hidden;
 }
-/*PROJECT PAGES*/
 .project-page{
     margin-right: 300px;
     margin-bottom: 25px;
