--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@ html{
 	font-size: 100%;
 }
 body{
-    max-width: 1000px;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.8em;
@@ -14,6 +13,10 @@ header{
 	left: 0;
 	width: 100%;
 	text-align: center;
+	letter-spacing: 0.2em;
+	background-color: #fafafa;
+	font-size: 1.3em;
+	line-height: 100px;
 }
 a{
    color: #333;
@@ -23,9 +26,29 @@ a{
 	margin: 0 auto;
 	max-width: 1024px;
 }
+#about{
+	background-color: #c26868;
+	margin-top: 100px;
+	height: 1020px;
+	padding-top: 70px;
+}
+#console{
+	border-radius: 5px;
+	width: 670px;
+	margin: 0 auto;
+	padding:40px;
+	height: 700px;
+	color: #fafafa;
+	background: #383737;
+	font-size: 13px;
+	text-align: left;
+	
+}
 main{
     overflow: hidden;
 }
+
+
 .wrapper{
     overflow: hidden;
 }
