--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ html{
 }
 body{
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Karla', Arial, sans-serif;
     line-height: 1.8em;
 		color: #333;
 }
@@ -15,6 +15,7 @@ header{
 	text-align: center;
 	letter-spacing: 0.2em;
 	background-color: #fafafa;
+	font-family: 'Montserrat', Arial, sans-serif;
 	font-size: 1.3em;
 	line-height: 100px;
 }
@@ -38,9 +39,10 @@ a{
 	margin: 0 auto;
 	padding:40px;
 	height: 700px;
-	color: #fafafa;
 	background: #383737;
+	color: #fafafa;
 	font-size: 13px;
+	font-family: 'Monaco', 'Courier New';
 	text-align: left;
 	
 }
