--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,7 @@ span.answer {
 	padding-top: 0px;
 	text-align: left;
 	line-height: 24px;
+	display: block;
 }
 .portfolio-thumb a {
 	text-decoration: underline;
@@ -118,6 +119,30 @@ footer{
 	font-size: 12px;
 	line-height: 20px;
 }
+
+@media screen and (max-width:860px){
+	.portfolio-thumb {
+		width:90%;
+	}
+}
+
+@media screen and (max-width:700px){
+	#console {
+		width: 100%;
+		overflow: hidden;
+	}
+}
+
+@media (max-width:480px){
+	header {
+		line-height: 30px;
+		padding-top: 30px;
+		text-align: left;
+		padding-left: 10px;
+		padding-bottom: 15px;
+	}
+}
+
 
 
 .wrapper{
