--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ header{
 	font-family: 'Montserrat', Arial, sans-serif;
 	font-size: 1.3em;
 	line-height: 100px;
+	z-index: 100;
 }
 a{
    color: #333;
@@ -29,7 +30,7 @@ a{
 }
 #about{
 	background-color: #c26868;
-	height: 1020px;
+	height: 1120px;
 	padding-top: 70px;
 }
 #about a {
@@ -55,7 +56,7 @@ a{
 	width: 670px;
 	margin: 0 auto;
 	padding:40px;
-	height: 700px;
+	height: 800px;
 	background: #383737;
 	color: #fafafa;
 	font-size: 13px;
@@ -92,7 +93,14 @@ span.answer {
 	margin:20px;
 	background-color: white;
 	display: inline-block;
+  opacity:1;
+    -webkit-transition:opacity .14s ease-out;
+    transition:opacity .14s ease-out;
 }
+.portfolio-thumb:hover {
+    opacity:.8;
+}
+
 .portfolio-big {
 	width: 95%;
 }
@@ -113,7 +121,7 @@ span.answer {
 footer{
 	background: #fafafa;
 	min-height: 50px;
-	text-align: left;
+	text-align: center;
 	color: #b1b1b1;
 	padding-top: 20px;
 	font-size: 12px;
@@ -141,188 +149,4 @@ footer{
 		padding-left: 10px;
 		padding-bottom: 15px;
 	}
-}
-
-
-
-.wrapper{
-    overflow: hidden;
-}
-.project-page{
-    margin-right: 300px;
-    margin-bottom: 25px;
-}
-.project-meta{
-    margin-right: -300px;
-    width: 275px;
-    float: right;
-    margin-bottom: 34px;
-}
-.project-description{
-    overflow: hidden;
-}
-.image-list{
-    overflow: hidden;
-}
-.image{
-    position: relative;
-    overflow: hidden;
-}
-.image img{
-    max-width: 100%;
-    margin: 0 auto;
-    margin-bottom: 0.5em;
-    display: block;
-    float: left;
-}
-/*PROJECT TILES*/
-#projectThumbs{
-    clear:both;
-}
-#projectThumbs>.wrapper{
-    width:103%;
-    margin-left:-3%;
-    margin-top:-3%;
-}
-#projectThumbs .project{
-    float:left;
-    margin-left:2.912621359223301%;
-    margin-top:3%;
-    width:22.0873786407767%;
-    cursor:pointer;
-    -webkit-transform:translatez(0);
-}
-#projectThumbs .project .project-image .intrinsic{
-    opacity:1;
-    -webkit-transition:opacity .14s ease-out;
-    transition:opacity .14s ease-out;
-}
-#projectThumbs .project:hover .project-image .intrinsic{
-    opacity:.8;
-}
-#projectThumbs .project .project-image{
-    background:#eee;
-    margin-bottom:3%;
-}
-#projectThumbs .project .project-image .intrinsic{
-    padding-bottom:100%;
-    line-height:0;
-    text-align:center;
-    position:relative;
-    overflow:hidden;
-}
-#projectThumbs .project .project-image .content-fill{
-    position:absolute;
-    top:0;
-    left:0;
-    bottom:0;
-    right:0;
-}
-#projectThumbs .project .project-title{
-    font-weight:normal;
-    font-style:italic;
-    font-size:12px;
-    text-transform:none;
-    letter-spacing:0px;
-    font-size:14px;
-    line-height:1.6em;
-    text-transform:uppercase;
-    text-decoration:none;
-    letter-spacing:.06em;
-    text-align:center;
-    font-weight:400;
-    font-style:normal;
-    color:#404040;
-}
-.content-fill img{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    max-width: 100%;
-    max-height: 100%;
-}
-/*RESPONSIVE DESIGN*/
-@media only screen and (min-device-width:641px){
-    html.touch #simpleControls{
-        display:block !important;
-    }
-}
-@media only screen and (max-width:750px){
-    .project-page{
-        width: 100%;
-    }
-    .project-meta{
-        margin: 0px auto;
-        width: auto;
-        float: none;
-    }
-    #projectThumbs>.wrapper{
-        width:103%;
-        margin-left:-3%;
-        margin-top:-3%;
-    }
-    #projectThumbs .project{
-        float:left;
-        margin-left:2.912621359223301%;
-        margin-top:3%;
-        width:47.0873786407767%;
-        cursor:pointer;
-    }
-    #projectThumbs .project .project-image{
-        opacity:1;
-        -webkit-transition:initial;
-    }
-    #projectThumbs .project .project-image{
-        background:#eee;
-        margin-bottom:3%;
-    }
-    #projectThumbs .project .project-image .intrinsic{
-        padding-bottom:100%;
-        line-height:0;
-        text-align:center;
-        position:relative;
-        overflow:hidden;
-    }
-    #projectThumbs .project .project-image .content-fill{
-        position:absolute;
-        top:0;
-        left:0;
-        bottom:0;
-        right:0;
-    }
-    #projectThumbs .project .project-title{
-        font-weight:normal;
-        font-style:italic;
-        font-size:12px;
-        text-transform:none;
-        letter-spacing:0px;
-        font-size:14px;
-        line-height:1.6em;
-        text-transform:uppercase;
-        text-decoration:none;
-        letter-spacing:.06em;
-        text-align:center;
-        font-weight:400;
-        font-style:normal;
-        color:#404040;
-    }
-    #projectThumbs .project .project-item-count{
-        display:none;
-    }
-    #projectThumbs .project:nth-child(odd){
-        clear:left !important;
-    }
-    #projectThumbs .project:nth-child(4n+1){
-        clear:none;
-    }
-    #projectPages .project{
-        margin:0 auto 20px;
-        width:auto !important;
-        float:none !important;
-    }
-    .wrapper{
-        padding:0 0 1em;
-        border-bottom:1px solid rgba(221,221,221,0);
-    }
 }
